Les Armes peuvent être changées et utilisées